--- a/configs/pmri.yaml
+++ b/configs/pmri.yaml
@@ -1,3 +1,3 @@
-data_dir: "../../../../../data/PMRI/"
+data_dir: "/home/chopra/old/Tasks/data/PMRI/"
 vendor_assignment: {'train': 'ge', 'test': 'philips'}
 batch_size: 32
